--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ image = "*"
 typed-arena = "*"
 smallvec="*"
 tobj="*"
+serde = "*"
+serde_json = "*"
+serde_macros = "*"
 
 [dependencies.glfw]
 git = "https://github.com/bjz/glfw-rs.git"
